🚧 💬💄⚰️ various changes * remove unused header logo * add card about me on homepage * Add logo and working back button on header * PageHeader: Make the link to Project Fluid actually redirect there * Fix link to YouTube

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
   --card: hsl(240 10% 3.9%);
   --card-foreground: hsl(0 0% 98%);
 
-  --popover: hsl(240, 6%, 10%);
+  --popover: #141417;
   --popover-foreground: hsl(0 0% 98%);
 
   --primary: hsl(0 0% 98%);
