--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,7 @@
 }
 
 body {
-  @apply min-h-screen w-full bg-background text-foreground flex flex-col selection:bg-zinc-50 selection:bg-opacity-10;
+  @apply w-full bg-background text-foreground flex flex-col selection:bg-zinc-50 selection:bg-opacity-10;
 }
 
 * {
